[gd_scene load_steps=3 format=3 uid="uid://cmxc644cqh1ho"]

[ext_resource type="Script" path="res://Scenes/HUD.gd" id="1_6yglb"]
[ext_resource type="LabelSettings" uid="uid://32m2pxmmpg5w" path="res://Resources/hud_font.tres" id="2_fc7d2"]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_6yglb")

[node name="HContainer" type="HBoxContainer" parent="."]
offset_left = 96.0
offset_top = 46.0
offset_right = 353.0
offset_bottom = 134.0
metadata/_edit_group_ = true

[node name="MinusButtonContainer" type="VBoxContainer" parent="HContainer"]
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_group_ = true

[node name="MinusRowButton" type="Button" parent="HContainer/MinusButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "-"

[node name="MinusColButton" type="Button" parent="HContainer/MinusButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "-"

[node name="MinusMineButton" type="Button" parent="HContainer/MinusButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "-"

[node name="LabelContainer" type="VBoxContainer" parent="HContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5
metadata/_edit_group_ = true

[node name="RowsNum" type="Label" parent="HContainer/LabelContainer"]
layout_mode = 2
text = "Rows: 9"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColsNum" type="Label" parent="HContainer/LabelContainer"]
layout_mode = 2
text = "Cols: 9"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MinesNum" type="Label" parent="HContainer/LabelContainer"]
layout_mode = 2
text = "Number of Mines: 10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlusButtonContainer" type="VBoxContainer" parent="HContainer"]
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_group_ = true

[node name="PlusRowButton" type="Button" parent="HContainer/PlusButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "+"

[node name="PlusColButton" type="Button" parent="HContainer/PlusButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "+"

[node name="PlusMineButton" type="Button" parent="HContainer/PlusButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "+"

[node name="NewGameButton" type="Button" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 192.0
offset_top = -32.0
offset_right = 320.0
offset_bottom = 32.0
grow_vertical = 2
text = "New Game"

[node name="BackButton" type="Button" parent="."]
offset_left = 192.0
offset_top = 448.0
offset_right = 320.0
offset_bottom = 512.0
text = "Back"

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.0
offset_top = 48.0
offset_right = 83.0
offset_bottom = 113.0
grow_horizontal = 2
text = "Game Over!!"
label_settings = ExtResource("2_fc7d2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 232.0
offset_top = -103.0
offset_right = 280.0
offset_bottom = -63.0
grow_vertical = 2
text = "0"
label_settings = ExtResource("2_fc7d2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RemainingLabel" type="Label" parent="."]
offset_left = 106.0
offset_top = 171.0
offset_right = 340.0
offset_bottom = 210.0
theme_override_font_sizes/font_size = 17
text = "Mines Remainig: 99"
label_settings = ExtResource("2_fc7d2")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HContainer/MinusButtonContainer/MinusRowButton" to="." method="_on_minus_row_button_pressed"]
[connection signal="pressed" from="HContainer/MinusButtonContainer/MinusColButton" to="." method="_on_minus_col_button_pressed"]
[connection signal="pressed" from="HContainer/MinusButtonContainer/MinusMineButton" to="." method="_on_minus_mine_button_pressed"]
[connection signal="pressed" from="HContainer/PlusButtonContainer/PlusRowButton" to="." method="_on_plus_row_button_pressed"]
[connection signal="pressed" from="HContainer/PlusButtonContainer/PlusColButton" to="." method="_on_plus_col_button_pressed"]
[connection signal="pressed" from="HContainer/PlusButtonContainer/PlusMineButton" to="." method="_on_plus_mine_button_pressed"]
[connection signal="pressed" from="NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_btton_pressed"]
